--- a/index.html
+++ b/index.html
@@ -5,15 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Test B - JQuery And AJAX</title>
 </head>
 
 <body>
 
+    <header class="page-header">
+        <h1 class="header-title">
+            Statistics on countries
+        </h1>
+    </header>
+    <main>
+        <section class="section-form">
+            <div class="form-button__all">
+                <button type="button" id="getAllCountries" class="btn btn-outline-primary">Primary</button>
+            </div>
+        </section>
+        <section class="section-results">
+            <div class="results__summary"></div>
+            <div class="results__citizens-table"></div>
+            <div class="results__region-table"></div>
+
+        </section>
+    </main>
+
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="script.js"></script>
 
 </html>
