--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
             <section class="section-results">
                 <div class="results results__summary"></div>
                 <div class="row results__tables">
-                    <div class="col-md-5 mr-2 results results__citizens-table"></div>
-                    <div class="col-md-5 results results__region-table"></div>
+                    <div class="col-md-5 mr-2 results results__citizens-table" id="results__citizens-table"></div>
+                    <div class="col-md-5 results results__region-table" id="results__region-table"></div>
                 </div>
-
             </section>
         </div>
     </main>
